--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>MegaCryption</title>
+  <title>Contact Us</title>
 
   <link rel="shortcut icon" type="image/jpg" href="assets/favicon/favicon.ico"/>
 
