--- a/hill.html
+++ b/hill.html
@@ -119,6 +119,16 @@
     </header>
 
     <script src="assets/js/hill.js"></script>
+
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+
+<script src="assets/js/google-maps.js"></script>
+
+<script src="assets/vendor/wow/wow.min.js"></script>
+
+<script src="assets/js/theme.js"></script>
   
     
 </body>
